# claude_profile

./: .gitignore  pyproject.toml  start.sh
claude_profile/: __init__.py  cli.py  config.py  models.py
claude_profile/dashboard/: app.py
claude_profile/dashboard/routers/: config.py  profiles.py  recommendations.py  usage.py  veille.py
claude_profile/dashboard/services/: claude_config_parser.py  recommender.py  stats_parser.py  veille_fetcher.py
claude_profile/dashboard/templates/: base.html  index.html
claude_profile/dashboard/templates/static/: style.css
claude_profile/profiles/: isolation.py  manager.py  overlay.py
claude_profile/sync/: engine.py  filters.py  manifest.py
claude_profile/utils/: claude_paths.py  git_ops.py
tests/: conftest.py
tests/integration/: test_dashboard_api.py
tests/unit/: test_claude_paths.py  test_config.py  test_manifest.py  test_overlay.py  test_profiles.py  test_recommender.py  test_stats_parser.py  test_sync_engine.py
